[package]
name = "limon"
version = "0.1.0"
authors = ["bodqhrohro <bodqhrohro@yandex.ru>"]
edition = "2018"

[lib]
name = "limonlib"
path = "src/lib.rs"

[[bin]]
name = "limonbin"
path = "src/bin.rs"

[dependencies]
itertools = "*"
procfs = "0.8"
lazy_static = "*"
linereader = "*"
regex = "1"
rust_decimal = "*"
once_cell = "*"
sensors = "*"
hdd = "*"
libc = "*"
battery = "*"
