[package]
name = "limon"
version = "0.1.0"
authors = ["bodqhrohro <bodqhrohro@yandex.ru>"]
edition = "2018"

[lib]
name = "limonlib"
path = "src/lib.rs"

[[bin]]
name = "limonbin"
path = "src/bin.rs"

[dependencies]
itertools = "*"
procfs = "0.8"
lazy_static = "*"
linereader = "*"
regex = "1"
rust_decimal = "^1.26.1"
once_cell = "*"
sensors = "^0.2.2"
hdd = "*"
libc = "*"
battery = "^0.7.8"
